@@ -1,5 +1,9 @@
 2012-04-19  Vanessa Gil  <vanessa.gil@artica.es>
 
+	* godmode/setup/setup.php: Changed timezone by default.
+
+2012-04-19  Vanessa Gil  <vanessa.gil@artica.es>
+
 	* operation/tree.php: Changes in tab os.
 
 2012-04-19  Vanessa Gil  <vanessa.gil@artica.es>
